syntax = "proto3";

package user;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tamirat-dejene/ha-soranu/shared/protos/userpb;userpb";

// Address represents a user's address details.
message Address {
  string address_id = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  uint32 postal_code = 5;
  string country = 6;
  float latitude = 7;
  float longitude = 8;
  google.protobuf.Timestamp created_at = 9;
}

// User represents a user in the system.
message  User {
  string user_id = 1;
  string email = 2;
  string username = 3;
  string phone_number = 4;
  repeated Address addresses = 5;
  google.protobuf.Timestamp created_at = 6;
}

// MessageResponse is a generic response message.
message MessageResponse {
  string message = 1;
}

// UserService defines the user-related RPC methods.
service UserService {
  // Retrieves user information by user ID.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // Manages user's phone number.
  rpc GetPhoneNumber(GetPhoneNumberRequest) returns (GetPhoneNumberResponse);
  // Adds, updates, or removes user's phone number.
  rpc AddPhoneNumber(AddPhoneNumberRequest) returns (MessageResponse);
  // Updates user's phone number.
  rpc UpdatePhoneNumber(UpdatePhoneNumberRequest) returns (MessageResponse);
  // Removes user's phone number.
  rpc RemovePhoneNumber(RemovePhoneNumberRequest) returns (MessageResponse);

  // Manages user's addresses.
  rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse);
  // Adds a new address for the user.
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  // Removes an address from the user.
  rpc RemoveAddress(RemoveAddressRequest) returns (MessageResponse);
}

// Requests and Responses for UserService RPC methods.
message GetUserRequest {
  string user_id = 1;
}

// GetUserResponse contains the user information.
message GetUserResponse {
  User user = 1;
}

// GetPhoneNumberRequest contains the user ID to retrieve the phone number.
message GetPhoneNumberRequest {
  string user_id = 1;
}

// GetPhoneNumberResponse contains the user's phone number.
message GetPhoneNumberResponse {
  string user_id = 1;
  string phone_number = 2;
}

// Requests for managing user's phone number.
message AddPhoneNumberRequest {
  string user_id = 1;
  string phone_number = 2;
}

// UpdatePhoneNumberRequest contains the user ID and new phone number.
message UpdatePhoneNumberRequest {
  string user_id = 1;
  string phone_number = 2;
}

// RemovePhoneNumberRequest contains the user ID to remove the phone number.
message RemovePhoneNumberRequest {
  string user_id = 1;
}

// Requests and Responses for managing user's addresses.
message GetAddressesRequest {
  string user_id = 1;
}

// GetAddressesResponse contains the list of user's addresses.
message GetAddressesResponse {
  repeated Address addresses = 1;
}

// AddAddressRequest contains the details for adding a new address.
message AddAddressRequest {
  string user_id = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  uint32 postal_code = 5;
  string country = 6;
  float latitude = 7;
  float longitude = 8;
}

// AddAddressResponse contains the newly added address.
message AddAddressResponse {
  Address address = 1;
}

// RemoveAddressRequest contains the user ID and address ID to be removed.
message RemoveAddressRequest {
  string user_id = 1;
  string address_id = 2;
}